Created css file

--- a/test.html
+++ b/test.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1> Learning git<h1>
-      <p>coding is cool</p>
+      <p>coding is cool, can you see this?</p>
   </body>
 </html>
