Added unordered list

--- a/test.html
+++ b/test.html
@@ -7,5 +7,10 @@
   <body>
     <h1> Learning git<h1>
       <p>coding is cool, can you see this?</p>
+      <ul>
+        <li>ichi</li>
+        <li>ni</li>
+        <li>san</li>
+      </ul>
   </body>
 </html>
